--- a/Appsss/Appsss/views/Home.xaml
+++ b/Appsss/Appsss/views/Home.xaml
@@ -6,24 +6,36 @@
 
     <ContentPage.Content>
         <ScrollView>
-            <StackLayout>
-                <Label Style="{StaticResource Secundary_Page_Label}" Text="Домашняя страница!"
+            <StackLayout BackgroundColor="Orange">
+
+
+                <Label  x:Name="myLabel" FontSize="30" HorizontalTextAlignment="Center" FontFamily="Fonts/nodesto_caps_condensed_bold_italic.ttf#Nodesto Caps Condensed Bold Italic" Text="Welcome to the world of 
+                    Role and Play!"
                     VerticalOptions="CenterAndExpand" 
                     HorizontalOptions="CenterAndExpand" />
 
-                <!-- Добавление 10 изображений списком сверху вниз -->
-                <Image Source="cat1.png" Aspect="AspectFit" />
-                <Image Source="cat2.png" Aspect="AspectFit" />
-                <Image Source="cat3.png" Aspect="AspectFit" />
-                <Image Source="cat1.png" Aspect="AspectFit" />
-                <Image Source="cat2.png" Aspect="AspectFit" />
-                <Image Source="cat3.png" Aspect="AspectFit" />
-                <Image Source="cat1.png" Aspect="AspectFit" />
-                <Image Source="cat2.png" Aspect="AspectFit" />
-                <Image Source="claw1.png" Aspect="AspectFit" />
-                <Image Source="cat1.png" Aspect="AspectFit" />
-                <Image Source="cat2.png" Aspect="AspectFit" />
-                <Image Source="cat3.png" Aspect="AspectFit" />
+                <!-- Изображения связанные с DND -->
+                <Image Source="dnd_logo.png" Aspect="AspectFit" />
+                <Image Source="dungeon_image.png" Aspect="AspectFit" />
+                <Image Source="dragon_image.png" Aspect="AspectFit" />
+
+                <Label Style="{StaticResource Secundary_Page_Label}" Text="О RoleAndPlay"
+                    VerticalOptions="CenterAndExpand" 
+                    HorizontalOptions="CenterAndExpand" />
+                <Label Text="Role and PLay (RAP) - это настольная ролевая игра, созданная Гари Гигаксом и Дэйвом Арнесоном. Игроки могут создавать своих персонажей, исследовать фантастические миры, сражаться с монстрами и взаимодействовать с другими игроками в увлекательных кампаниях."
+                    VerticalOptions="CenterAndExpand" 
+                    HorizontalOptions="CenterAndExpand" />
+
+                <Label Style="{StaticResource Secundary_Page_Label}" Text="Возможности приложения:"
+                    VerticalOptions="CenterAndExpand" 
+                    HorizontalOptions="CenterAndExpand" />
+                <Label Text="1. Бросайте кости различных форм для определения исхода событий.
+2. Создавайте лист персонажа, добавляйте фотографии и заполняйте характеристики.
+3. Исследуйте библиотеку правил RAP и получайте актуальную информацию.
+4. Подключайтесь к сообществу игроков, обменивайтесь опытом и идеями.
+5. Отслеживайте свои кампании и приключения с помощью встроенного календаря."
+                    VerticalOptions="CenterAndExpand" 
+                    HorizontalOptions="CenterAndExpand" />
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
